[package]
name = "embassy-tls-example"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
cfg-if = "1.0.0"
critical-section = "1.1.2"
crypto-bigint = { version = "0.5.5", default-features = false }
elliptic-curve = { version = "0.13.8", default-features = false, features = ["sec1"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.1"
embedded-nal-async = "0.2.0"
embedded-tls = "0.17.0"
esp-alloc = "0.4.0"
esp-backtrace = { version = "0.13.0", features = ["exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.19.0", features = ["log"] }
esp-hal-embassy = { version = "0.2.0", optional = true }
esp-hal-smartled = { version = "0.12.0", optional = true }
esp-ieee802154 = { version = "0.1.0", optional = true }
esp-println = { version = "0.10.0", features = ["log"] }
esp-storage = { version = "0.3.0", optional = true }
esp-wifi = { version = "0.7.1", optional = true }
fugit = "0.3.7"
heapless = "0.8.0"
hex-literal = "0.4.1"
hmac = { version = "0.12.1", default-features = false }
portable-atomic = { version = "1.6.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
smart-leds = "0.4.0"
smoltcp = { version = "0.11.0", default-features = false, features = ["medium-ethernet", "socket-raw"] }
static_cell = { version = "2.1.0", features = ["nightly"] }

[features]
default = ["esp32"]
esp32 = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-hal-embassy?/esp32", "esp-println/esp32", "esp-storage?/esp32", "esp-wifi?/esp32", "esp-hal-smartled/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy?/esp32c2", "esp-println/esp32c2", "esp-storage?/esp32c2", "esp-wifi?/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy?/esp32c3", "esp-println/esp32c3", "esp-storage?/esp32c3", "esp-wifi?/esp32c3", "esp-hal-smartled/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy?/esp32c6", "esp-println/esp32c6", "esp-storage?/esp32c6", "esp-wifi?/esp32c6", "esp-hal-smartled/esp32c6", "esp-ieee802154/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy?/esp32h2", "esp-println/esp32h2", "esp-storage?/esp32h2", "esp-wifi?/esp32h2", "esp-hal-smartled/esp32h2", "esp-ieee802154/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-hal-embassy?/esp32s2", "esp-println/esp32s2", "esp-storage?/esp32s2", "esp-wifi?/esp32s2", "esp-hal-smartled/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy?/esp32s3", "esp-println/esp32s3", "esp-storage?/esp32s3", "esp-wifi?/esp32s3", "esp-hal-smartled/esp32s3"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
opt-level = 3
lto = "fat"
overflow-checks = false
